<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_titulo"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Name"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/edt_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Cpf"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/edt_rua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Rua"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/edt_bairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Bairro"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/edt_modelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Modelo do carro"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edt_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="senha"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="RealizarCadastro"
                android:text="@string/register_btn_add"
                app:strokeColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_register_cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:onClick="cancelar"
                android:text="@string/register_btn_cancel"
                app:strokeColor="@color/purple_700"
                app:strokeWidth="1dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>